# tisane

./: pyproject.toml
.github/workflows/: main.yml
tisane/gui/: callbacks.py  family_link_function_callbacks.py  gui.py  gui_components.py  random_effects_callbacks.py
