[project]
name = "tisane"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Eunice Jun <eunice.m.jun@gmail.com>", "Audrey Seo <audreyleeseo@gmail.com>"]
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.6.4",
    "dash>=2.18.1",
    "dash-bootstrap-components>=1.6.0",
    "dash-daq>=0.5.0",
    "flask>=3.0.3",
    "h5>=0.9.3",
    "h5py>=3.12.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyter-dash>=0.4.2",
    "more-itertools>=10.5.0",
    "networkx>=3.4.2",
    "numpydoc>=1.8.0",
    "pandas>=2.2.3",
    "patsy>=0.5.6",
    "plotly>=5.24.1",
    "pydata-sphinx-theme>=0.16.0",
    "pydot>=3.0.2",
    "pymer4>=0.8.2",
    "sphinx>=8.1.3",
    "sphinx-autoapi>=3.3.2",
    "statsmodels>=0.14.4",
    "toml>=0.10.2",
    "tweedie>=0.0.9",
]

[dependency-groups]
dev = ["pytest>=8.3.3", "pytest-cov>=5.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
